fix: fixing mobile layout breaks

--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -100,6 +100,7 @@
   color: white;
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
+  text-align: left;
 }
 
 .form-input-text textarea {
@@ -120,6 +121,7 @@
   color: white;
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
+  text-align: left;
 }
 
 .form-input-text button {
@@ -180,19 +182,24 @@ span {
   .form-input {
     display: flex;
     flex-direction: column;
+    border: 1px solid red;
   }
 
   .form-input input {
     width: 100%;
   }
 
+  .form-input-text {
+    border: 1px solid red;
+  }
+
   .form-input-text textarea {
-    width: 230px;
+    width: 100%;
     height: 210px;
   }
 
   .form-input-text input {
-    width: 230px;
+    width: 100%;
     height: 72px;
   }
 }
